전반적인 Electron-loader 및 빌드 스크립트 작성 (test code 포함) - electron-builder를 활용한 nsis 인스톨러 빌드 스크립트 작성 - 해당 환경을 구축하기위한 스크립트 작성

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "cop-electron-loader",
-  "version": "1.0.0",
-  "description": "COP Project Loader for Electron",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "author": "TmaxA&C",
-  "license": "MIT",
-  "devDependencies": {
-    "electron": "^7.1.9"
-  }
+    "name": "",
+    "version": "1.0.0",
+    "description": "test",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "dist": "electron-builder --windows",
+        "start": "electron ."
+    },
+    "build":{
+        "win":{      
+        }
+    }
 }
