--- a/build-tools/build
+++ b/build-tools/build
@@ -12,7 +12,7 @@ os.chdir(os.path.dirname(os.path.realpath(__file__)))
 with open('./build.config.json','r') as json_file:
     config_json_data = json.load(json_file)
 print("load 'build.config.json' file")
-print(json.dumps(config_json_data, ensure_ascii=False, indent=4))
+# print(json.dumps(config_json_data, ensure_ascii=False, indent=4))
 
 ## default parameter settings ##
 ELECTRON_PROJECT_ROOT = config_json_data["projectRoot"]
@@ -27,7 +27,7 @@ if len(sys.argv) >= 2:
   with open(sys.argv[1],'r') as json_file:
     specific_config_json_data = json.load(json_file)  
   print("load "+ sys.argv[1] +" file")
-  print(json.dumps(specific_config_json_data, ensure_ascii=False, indent=4))
+  # print(json.dumps(specific_config_json_data, ensure_ascii=False, indent=4))
 
   ## specific parameter settings ##
   # overriding
@@ -61,6 +61,8 @@ with open('../package.json','r') as json_file:
 # make 'package.json'
 package_json["name"] = APP_NAME
 package_json["build"]["win"]["icon"] = ELECTRON_ICON_PATH
+if BUILDTYPE == "debug":
+  package_json["main"] = "index_debug.js"
 
 with open('package.json', 'w') as make_file:
     json.dump(package_json, make_file, ensure_ascii=False, indent=4)
